# faithea-project

./: ----------------------------329163879024  .gitignore  2026-1-17.md  Cargo.toml  README.md  README_CN.md  cert.pem  hello  huihui.tsx  init-plan.md  key.pem  mid-term-report.md  thesis.md  thesis_v2.md
.claude/agents/: commit-writer.md
.codex/agents/: commit-writer.toml
.playwright-mcp/: page-2026-06-07T02-25-47-118Z.yml  page-2026-06-07T02-26-35-001Z.yml  page-2026-06-07T02-26-48-517Z.yml
app/: Cargo.toml
app/src/: lib.rs  main.rs  static_file_map.rs
app/src/test_h/: mod.rs
app/src/test_handler/: cookie.rs  custom_res.rs  from_request.rs  hello_world.rs  json.rs  mod.rs  multipart.rs  path_param.rs  redirect.rs  search_param.rs  stream.rs
app/src/util/: mod.rs
app/src/util/inner_util/: mod.rs
app/src/ws/: mod.rs
app/tests/: test_handlers.rs
blogs/: BREAKING_CHANGES.md  v0.1.8.md
examples/sql-int/: .env  Cargo.toml
examples/sql-int/src/: lib.rs  main.rs
examples/sql-int/src/dao/: user.rs
examples/sql-int/src/handlers/: mod.rs
examples/sql-int/src/service/: user_service.rs
faithea/: Cargo.toml  README.md
faithea-io-core/: Cargo.toml
faithea-io-core/src/: lib.rs
faithea-macro/: Cargo.toml
faithea-macro/src/: derive_macro.rs  lib.rs  utils.rs
faithea-website/: .gitignore  package.json
faithea-website/content/docs/: _meta.json  index.en.md  index.zh-CN.md
faithea-website/content/docs/advanced/: _meta.json  advanced-responses.en.md  advanced-responses.zh-CN.md  custom-extractors.en.md  custom-extractors.zh-CN.md  guards.en.md  guards.zh-CN.md  static-files.en.md  static-files.zh-CN.md  streaming-sse.en.md  streaming-sse.zh-CN.md  tls-http2.en.md  tls-http2.zh-CN.md  websockets.en.md  websockets.zh-CN.md
faithea-website/content/docs/examples/: _meta.json  english-only.en.md  markdown.en.md  markdown.zh-CN.md
faithea-website/content/docs/getting-started/: _meta.json  basic-usage.en.md  basic-usage.zh-CN.md  error-handling.en.md  error-handling.zh-CN.md  installation.en.md  installation.zh-CN.md  request-data.en.md  request-data.zh-CN.md  responses.en.md  responses.zh-CN.md  routing.en.md  routing.zh-CN.md
faithea-website/content/docs/introduction/: _meta.json  welcome.en.md  welcome.zh-CN.md
faithea-website/scripts/: sync-doc-assets.ts
faithea-website/src/app/: globals.css  layout.tsx  page.tsx
faithea-website/src/app/blog/: page.tsx
faithea-website/src/components/: docs-page.tsx  docs-prose.tsx  docs-sidebar.tsx  docs-toc.tsx  site-chrome.tsx
faithea-website/src/lib/: docs.test.ts  docs.ts  i18n.ts
faithea-websocket/: Cargo.toml  LICENSE  README.md
faithea-websocket/examples/: in_memory_roundtrip.rs  tcp_echo.rs
faithea-websocket/src/: lib.rs
faithea-websocket/src/websocket/: data.rs  mod.rs
faithea/src/: guard.rs  handler.rs  lib.rs  proxy.rs  route.rs
faithea/src/data/: mod.rs  outbound.rs
faithea/src/data/inbound/: mod.rs
faithea/src/data/inbound/multipart/: mod.rs
faithea/src/data/inbound/multipart/parser/: h1.rs  mod.rs
faithea/src/error/: mod.rs
faithea/src/handler/: mod.rs  types.rs
faithea/src/io/: mod.rs
faithea/src/request/: content_type.rs  cookie.rs  error.rs  mod.rs  path_param.rs  search_param.rs
faithea/src/response/: cookie.rs  cors.rs  mod.rs  redirect.rs  sse.rs  stream.rs
faithea/src/server/: builder.rs  http1.rs  http2.rs  mod.rs
faithea/src/server/parser/: mod.rs
faithea/src/service/: h1.rs  h2.rs  mod.rs
faithea/src/util/: mod.rs  trie.rs
faithea/src/websocket/: data.rs  mod.rs  socket.rs
faithea/tests/: a.rs  functional.rs
front-end-app/: index.html  main.js  websocket.html
front-end-app/todo/: index.html
front-end-app/todo/css/: style.css
front-end-app/todo/js/: app.js  storage.js  todoManager.js  ui.js
http-server/: Cargo.toml
http-server-macro/: Cargo.toml
http-server-macro/src/: derive_macro.rs  lib.rs  utils.rs
http-server/src/: guard.rs  gurad.rs  handler.rs  httpserver.rs  lib.rs  request.rs  response.rs  route.rs  server.rs
http-server/src/data/: inbound.rs  mod.rs  outbound.rs
http-server/src/data/inbound/: mod.rs  multipart.rs
http-server/src/data/inbound/multipart/parser/: h1.rs  h2.rs  mod.rs
http-server/src/request/: content_type.rs  cookie.rs  method.rs  mod.rs  path_param.rs  search_param.rs
http-server/src/response/: cookie.rs  cors.rs  mod.rs
http-server/src/server/: builder.rs  http1.rs  http2.rs  mod.rs
http-server/tests/: a.rs
http2/: Cargo.toml
http2/src/: main.rs
output/doc/: 基于Rust的高性能异步HTTP框架设计与实现.doc  基于Rust的高性能异步HTTP框架设计与实现.docx  基于Rust的高性能异步HTTP框架设计与实现v2 copy.docx
website-server/: Cargo.toml
website-server/src/: main.rs
(+6 files in other folders)
