[package]
name = "chenzhonghai-app"
version = "0.1.0"
edition = "2024"

[dependencies]
faithea = {path='../faithea'}
# http-server-macro = {path='../http-server-macro'},"rt-multi-thread"
tokio = { version = "1.48.0", features = ["rt","rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# "macros","net","sync","io-util","fs"
