[package]
name = "faithea-websocket"
version = "0.1.0"
edition = "2024"
description = "A transport-agnostic server-side WebSocket protocol layer"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/websocket"
keywords = ["websocket", "ws", "protocol", "server"]
categories = ["network-programming", "web-programming::websocket"]

[dependencies]
bytes = "1.11.1"
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
