[package]
name = "faithea"
version = "0.1.5"
edition = "2024"
repository = "https://github.com/bigoldcat123/graduation"
description = "A HTTP framework"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.11.0"
urlencoding = "2.1.3"
rand = "0.9.2"
serde = { version = "1.0.228",features=["derive"] }
serde_json = "1.0.145"

tokio = { version = "1.48.0", features = ["rt","macros","net","sync","io-util","fs"] }

faithea-macro = {path = '../faithea-macro',version = '0.1.2'}
http = "1.4.0"


tokio-rustls = "0.26.4"
rustls = "0.23.35"
h2 = "0.4.12"
base64 = "0.22.1"
sha1 = "0.10.6"
