[package]
name = "faithea"
version = "0.1.8"
edition = "2024"
repository = "https://github.com/bigoldcat123/graduation"
description = "A HTTP framework"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.11.0"
urlencoding = "2.1.3"
rand = "0.9.2"
serde = { version = "1.0.228",features=["derive"] }
serde_json = "1.0.145"

tokio = { version = "1.48.0", features = ["rt","macros","net","sync","io-util","fs"] }

faithea-io-core = {path = '../faithea-io-core',version = '0.1.0'}
faithea-websocket = {path = '../faithea-websocket',version = '0.1.0'}
faithea-macro = {path = '../faithea-macro',version = '0.1.4'}
http = "1.4.0"


tokio-rustls = "0.26.4"
rustls = {version = "0.23.35",features = ["ring"]}
h2 = "0.4.12"
base64 = "0.22.1"
sha1 = "0.10.6"
log = "0.4.29"
hyper = { version = "1.9.0", features = ["http1", "http2", "server"] }
pin-project-lite = "0.2.17"
# hyper-util = "0.1.20"
