[package]
name = "http-server-macro"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/bigoldcat123/graduation"
description = "A macro for creating HTTP servers"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full"] }
