[package]
name = "http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt","macros","net","sync","io-util","fs"] }
http-server-macro = {path = '../http-server-macro'}
urlencoding = "2.1.3"
