[package]
name = "sql-int"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
faithea = {path="../../faithea"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "macros", "postgres","runtime-tokio","tls-rustls","bigdecimal"] }
tokio = { version = "1.49.0", features = ["macros", "rt", "test-util"] }
